:tada: Finalizando aplicação

--- a/coffee-delivery/index.html
+++ b/coffee-delivery/index.html
@@ -14,6 +14,8 @@
     <!-- ViewPort -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
+  <link rel="shortcut icon" href="/favicon.png" type="image/png">
+
   <!-- Name Home -->
   <title>Coffee Delivery - Home </title>
 </head>
